--- a/themes/typography/layout/partial/nav.pug
+++ b/themes/typography/layout/partial/nav.pug
@@ -10,20 +10,24 @@ div#site-nav.site-title-links
                 a.current(href=config.root + config.archive_dir)= __('Archive')
             else
                 a(href=config.root + config.archive_dir)= __('Archive')
-        - if (site.categories.length > 0) {
-        li
-            if is_current('categories/')
-                a.current(href=config.root + config.category_dir)= __('Categories')
-            else
-                a(href=config.root + config.category_dir)= __('Categories')
-        - }
-        - if (site.tags.length > 0) {
-        li
-            if is_current('tags/')
-                a.current(href=config.root + config.tag_dir)= __('Tags')
-            else
-                a(href=config.root + config.tag_dir)= __('Tags')
-        - }
+        //- - if (site.categories.length > 0) {
+        //- li
+        //-     - var currentPath = url_for(config.category_dir)
+        //-     - var isCurrent = path == currentPath || path == currentPath + 'index.html'
+        //-     if isCurrent
+        //-         a.current(href=currentPath)= __('Categories')
+        //-     else
+        //-         a(href=currentPath)= __('Categories')
+        //- - }
+        //- - if (site.tags.length > 0) {
+        //- li
+        //-     - var currentPath = url_for(config.tag_dir)
+        //-     - var isCurrent = path == currentPath || path == currentPath + 'index.html'
+        //-     if isCurrent
+        //-         a.current(href=currentPath)= __('Tags')
+        //-     else
+        //-         a(href=currentPath)= __('Tags')
+        //- - }
         include ../mixins
         +make_page_links()
         li.soc
