--- a/themes/cactus/layout/_partial/footer.ejs
+++ b/themes/cactus/layout/_partial/footer.ejs
@@ -16,3 +16,13 @@
     </nav>
   </div>
 </footer>
+
+<script src="https://cdn.bootcdn.net/ajax/libs/mermaid/8.13.8/mermaid.min.js"></script>
+<script>
+  if (window.mermaid) {
+    mermaid.initialize({
+      startOnLoad: true,
+      theme: 'dark', // 这里改成了 'dark'，文字就会变成浅色
+    });
+  }
+</script>
